<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/hello_calibrate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCalibrateFront"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/calibrate_front"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCalibrateBack"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCalibrateBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="148dp"
        android:text="@string/calibrate_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalibratePortraitUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/calibrate_portrait_up"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCalibratePortraitDown"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCalibratePortraitDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/calibrate_portrait_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalibrateBack" />

    <Button
        android:id="@+id/btnCalibrateLandscapeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/calibrate_landscape_left"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCalibrateLandscapeRight"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCalibrateLandscapeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:text="@string/calibrate_landscape_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnCalibrateLandscapeLeft"
        app:layout_constraintTop_toBottomOf="@+id/btnCalibratePortraitDown" />

</android.support.constraint.ConstraintLayout>